# procurement-agent

./: .env.example  .gitignore  AI_FEATURES.md  API_SPEC.md  DATA_TABLES.md  LLM_PROMPTS.md  PRD.md  PRD_REBUILD.md  README.md  requirements.txt  test_mouser.py  操作手册.md
backend/: .env.example  config.py  main.py  models.py  pyproject.toml
backend/components/: PriceMonitorPanel.jsx
backend/routers/: __init__.py  chat.py  price.py  supplier.py
backend/scripts/: test_mouser_api.py  test_price_tracker.py
backend/services/: __init__.py  digikey.py  enterprise.py  llm.py  mouser.py  price_cache.py  price_history.py  price_scheduler.py
docs/: supplier-sourcing-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/common/: LoadingSteps.jsx  SettingsModal.jsx  index.js
frontend/src/components/layout/: Header.jsx  index.js
frontend/src/components/price/: PriceCompare.jsx  PriceSearch.jsx  PriceTracker.jsx  index.js
frontend/src/components/supplier/: InterviewGenerator.jsx  SourcingForm.jsx  SupplierCard.jsx  SupplierDetail.jsx  SupplierDetailModal.jsx  SupplierFinder.jsx  SupplierTable.jsx  index.js
frontend/src/hooks/: useApi.js  useLocalStorage.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
