[project]
name = "procurement-agent-backend"
version = "1.0.0"
description = "进田电子采购智能体后端服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.0",
    "aiosqlite==0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
